[project]
name = "astro-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Cohen", email = "wezelball@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
astro-planner = "astro_planner:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
