[project]
name = "astro-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Cohen", email = "wezelball@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "plotly>=6.5.2",
    "skyfield>=1.54",
    "streamlit>=1.53.1",
    "tomli>=2.4.0",
]

[project.scripts]
astro-planner = "astro_planner:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
