[project]
name = "astro-planner"
version = "0.1.0"
description = "A python/streamlit application for finding candidates for astrophotography"
readme = "README.md"
authors = [
    { name = "David Cohen", email = "wezelball@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "astropy>=6.1.7",
    "plotly>=6.5.2",
    "skyfield>=1.54",
    "streamlit>=1.53.1",
    "tomli>=2.4.0",
]

[project.scripts]
astro-planner = "astro_planner.main:main"

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[tool.uv]
package = true

[tool.setuptools.package-data]
"astro_planner" = ["data/*", "skyfield_data/*", "horizon/*", "config/*"]
